# damo

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
conf/: config.yaml
conf/dataset/: default.yaml
conf/experiment/: mixed_train_mixed_val.yaml  mixed_train_mixed_val_medium.yaml  mixed_train_real_val.yaml  mixed_train_real_val_medium.yaml
conf/logger/: wandb.yaml
conf/model/: default.yaml
scripts/: eval_training_merged_viz.py  inspect_data.py  inspect_dataset.py  process_amass_dataset.py  run_mocap_pcd_inference.py  submit_training_job.sbatch  train.py  train_one_step.py
scripts/prepare_data/: build_amass_smplh_body_pool.py  build_markersets.py  precompute_marker_geom.py
scripts/temp/: Inspect_body.py  process_caesar.py
src/damo/: trainer.py
src/damo/dataset/: amass_dataset.py  body_cache.py  marker_sampler.py  mocap_noise_augmentor.py  structs.py
src/damo/debug/: markers.py
src/damo/logger/: base_logger.py  wandb_logger.py
src/damo/model/: damo.py
src/damo/model/layers/: attention.py  blocks.py  pe.py  transforms.py
src/damo/smpl/: __init__.py  body_model.py  model_output.py
src/damo/solver/: svd_solver.py
src/damo/utils/: __init__.py  amass_utils.py  data_utils.py  ensure_types.py  io_utils.py  mocap_utils.py  paths.py  random_utils.py  smplx_utils.py  torch_utils.py  tqdm_utils.py
src/damo/viz/: __init__.py  viewer.py
tests/: test_data_utils.py  test_eval_training_merged_viz.py  test_mocap_pcd_inference_runner.py  test_mocap_utils.py  test_synthetic_sampling_data.py  test_trainer_logging.py
